# zeroaudit

./: .env  .gitignore  Dockerfile.prover  Dockerfile.simulator  Dockerfile.verifier  README.md  build.py  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_db.py  write_dashboard.py
dashboard/: index.html.bak  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/components/: BellCurveCanvas.jsx  BenfordChart.jsx  CryptographicLedger.jsx  GraphProximity.jsx  IntentEngine.jsx  PipelineTelemetry.jsx  TPSChart.jsx  Ticker.jsx  TopBar.jsx
dashboard_static/: serve.py
docs/: api.md  architecture.md  presentation.md
prover/: __init__.py  consumer.py  db_poller.py  main.py
prover/config/: settings.py
prover/crypto/: __init__.py  commitment.py  lwe.py  signature.py
prover/models/: __init__.py  transaction.py
scripts/: check_health.ps1  setup.ps1  setup.sh  start.sh  stop.sh
services/debezium/: connector-config.json
services/kafka/: create_topics.sh
services/postgres/: init.sql
simulator/: __init__.py  bank_sim.py  generate.py
tests/: Test crypto.py  test_crypto.py  test_integration.py  test_verifier.py
verifier/: __init__.py  __main__.py  anomaly_detector.py  api.py  dashboard.py  main.py  verifier.py  verify.py
verifier/components/: __init__.py  charts.py  sidebar.py
verifier/kafka_client/: __init__.py  consumer.py
