[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zeroaudit"
version = "1.0.0"
description = "Post-quantum ZK commitment engine for financial transactions"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["prover*", "verifier*", "simulator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]